RESOLVED FIXED32877
[GTK] confirm dialog should show OK/Cancel instead of Yes/No for consistency
https://bugs.webkit.org/show_bug.cgi?id=32877
Summary [GTK] confirm dialog should show OK/Cancel instead of Yes/No for consistency
Grant Gayed
Reported 2009-12-22 12:28:16 PST
- using WebKitGTK 1.1.16 built from source on Ubuntu 9.10 Every other Browser I have access to, including Safari, labels the buttons in javascript confirm prompters as OK/Cancel, but WebKitGTK labels them Yes/No. I realize that there may not be a "correct" set of buttons spec'd for this type of prompter, but since all of the other Browsers are using OK/Cancel, there are JS authors that word their confirm messages accordingly (this is how I noticed this difference).
Attachments
Patch (2.05 KB, patch)
2010-08-20 20:25 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-08-20 20:22:00 PDT
This is the fallback dialog, so this change would be pretty safe. I'm not sure how others feel about this, but I'm attaching a patch. If others dislike the change we can close the bug.
Martin Robinson
Comment 2 2010-08-20 20:25:44 PDT
Gustavo Noronha (kov)
Comment 3 2010-08-25 11:00:37 PDT
Comment on attachment 65018 [details] Patch I do think it makes a lot of sense to use the commonly used terms.
Martin Robinson
Comment 4 2010-08-25 18:39:41 PDT
Comment on attachment 65018 [details] Patch Clearing flags on attachment: 65018 Committed r66070: <http://trac.webkit.org/changeset/66070>
Martin Robinson
Comment 5 2010-08-25 18:39:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.