2010-08-25  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        confirm dialog should show OK/Cancel instead of Yes/No for consistency
        https://bugs.webkit.org/show_bug.cgi?id=32877

        Change the button labels for the fallback confirmation dialog to be
        OK and Cancel.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_script_dialog):

Canonical link: https://commits.webkit.org/56843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66070 268f45cc-cd09-0410-ab3c-d52691b4dbfc